style/text editor: fix layout issues

--- a/apps/client/src/widgets/containers/scrolling_container.css
+++ b/apps/client/src/widgets/containers/scrolling_container.css
@@ -6,7 +6,7 @@
     > .inline-title,
     > .note-detail > .note-detail-editable-text > .note-detail-editable-text-editor,
     > .note-list-widget:not(.full-height) .note-list-wrapper {
-        padding-inline: 24px;
+        margin-inline: 24px;
     }
 
     > .note-detail > .note-detail-editable-text > .note-detail-editable-text-editor {
